--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
-    "name": "quentin/qualitedecode",
-    "description": "clean code",
+    "name": "ipssi/cleancode",
+    "description": "Clean Code",
     "type": "project",
     "license": "MIT",
     "authors": [
         {
-            "name": "quentin",
-            "email": "quentin.nicolas.tessier@gmail.com"
+            "name": "Vincent Letourneau",
+            "email": "vincent@nanoninja.com"
         }
-    ],  
-    "minimum-stability":    "stable",
-    "autoload":{
-        "psr-4":{
-            "Ipssi\\":"src/Ipssi"
+    ],
+    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "Ipssi\\": "src/Ipssi"
         }
     },
-    "autoload-dev":{
-        "psr-4":{
-            "Ipssi\\":"test/Ipssi"
+    "autoload-dev": {
+        "psr-4": {
+            "Ipssi\\": "test/Ipssi"
         }
     },
     "require": {
@@ -28,7 +28,7 @@
         "phpunit/phpunit": "^6.0",
         "squizlabs/php_codesniffer": "^3.2",
         "friendsofphp/php-cs-fixer": "^2.10",
-		"phpunit/php-code-coverage": "5.3",
-		"phpunit/phpunit-selenium": "^4.1"
+        "phpunit/php-code-coverage": "5.3",
+        "phpunit/phpunit-selenium": "^4.1"
     }
 }
